--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -9,16 +9,16 @@
 
 <body class="align">
 	<div class="grid">
-		<form action="home.html" method="get" class="form login">
+		<form action="Login" method="POST" class="form login">
 			<header class="login__header">
 				<h3 class="login__title">Login</h3>
 			</header>
 			<div class="login__body">
 				<div class="form__field">
-					<input type="email" placeholder="Email" required>
+					<input type="email" name="email" placeholder="Email" required>
 				</div>
 				<div class="form__field">
-					<input type="password" placeholder="Password" required>
+					<input type="password" name="password" placeholder="Password" required>
 				</div>
 			</div>
 			<footer class="login__footer">
