--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -9,22 +9,22 @@
 
 <body class="align">
 	<div class="grid">
-		<form action="login.html" method="get" class="form login">
+		<form action="Signup" method="POST" class="form login">
 			<header class="login__header">
 				<h3 class="login__title">Create an Account</h3>
 			</header>
 			<div class="login__body">
 				<div class="form__field">
-					<input type="email" placeholder="Email" required>
+					<input type="email" name="email" placeholder="Email" required>
 				</div>
 				<div class="form__field">
-					<input type="username" placeholder="Username" required>
+					<input type="username" name="username" placeholder="Username" required>
 				</div>
 				<div class="form__field">
-					<input type="password" placeholder="Password" required>
+					<input type="password" name="password" placeholder="Password" required>
 				</div>
 				<div class="form__field">
-					<input type="password" placeholder="Re-enter Password" required>
+					<input type="password" name="verification" placeholder="Re-enter Password" required>
 				</div>
 			</div>
 			<footer class="login__footer">
