--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Login • ShareSpace</title>
 	<meta charset="UTF-8">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="main.css">
 </head>
 
