--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
 
-<head>
-	<title>Login • ShareSpace</title>
-	<meta charset="UTF-8">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="main.css">
-</head>
-
-<body class="align">
-	<div class="grid">
-		<form action="Login" method="POST" class="form login">
-			<header class="login__header">
-				<h3 class="login__title">Login</h3>
-			</header>
-			<div class="login__body">
-				<div class="form__field">
-					<input type="email" name="email" placeholder="Email" required>
-				</div>
-				<div class="form__field">
-					<input type="password" name="password" placeholder="Password" required>
-				</div>
-			</div>
-			<footer class="login__footer">
-				<input type="submit" value="Login">
-				<p><a href="signup.html">Create an Account</a></p>
-			</footer>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>ShareSpace • Login</title>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="login.css">
+	</head>
+	
+	<body>
+		
+		<form class="box" action="Login" method="POST">
+			<h1>Login</h1>
+			<input autocomplete="off" type="text" name="username" placeholder="Username">
+			<input autocomplete="off" type="password" name="password" placeholder="Password">
+			<input type="submit" name="" value="Login">
+			<a href="signup.html">Create an Account</a>
 		</form>
-	</div>
-</body>
-
+	</body>
 </html>
